--- a/Capstone_Segmenting1.ipynb
+++ b/Capstone_Segmenting1.ipynb
@@ -30,7 +30,7 @@
         "colab_type": "text"
       },
       "source": [
-        "In this task: <br>\n",
+        "Task one: <br>\n",
         "line (6): I scraped page using pd.read_html function. <br>\n",
         "line (7): I filtered 'Borough' column not equal to 'Not assigned'.<br>\n",
         "line (8): First, replace 'Not assigned' Neighbourhoods to empty cells than fill it with Borough. <br>\n",
@@ -214,6 +214,183 @@
             "tags": []
           },
           "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PhiwPFyhlkKm",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Task two:**<br>\n",
+        "line (2): create DataFrame coordinates with csv file. <br>\n",
+        "line (3): Joining DF coordinates to the first DF so that Postcodes mathes."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hap69fJii5FT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        },
+        "outputId": "e3cb9e7a-5963-4199-f74f-abe6ecc0789f"
+      },
+      "source": [
+        "url1 = 'http://cocl.us/Geospatial_data'\n",
+        "coordinates = pd.read_csv(url1)\n",
+        "df.join(coordinates.set_index('Postal Code'), on='Postcode')"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Postcode</th>\n",
+              "      <th>Borough</th>\n",
+              "      <th>Neighbourhood</th>\n",
+              "      <th>Latitude</th>\n",
+              "      <th>Longitude</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>M1B</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Rouge, Malvern</td>\n",
+              "      <td>43.806686</td>\n",
+              "      <td>-79.194353</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>M1C</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Highland Creek, Rouge Hill, Port Union</td>\n",
+              "      <td>43.784535</td>\n",
+              "      <td>-79.160497</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>M1E</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Guildwood, Morningside, West Hill</td>\n",
+              "      <td>43.763573</td>\n",
+              "      <td>-79.188711</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>M1G</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Woburn</td>\n",
+              "      <td>43.770992</td>\n",
+              "      <td>-79.216917</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>M1H</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Cedarbrae</td>\n",
+              "      <td>43.773136</td>\n",
+              "      <td>-79.239476</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>98</th>\n",
+              "      <td>M9N</td>\n",
+              "      <td>York</td>\n",
+              "      <td>Weston</td>\n",
+              "      <td>43.706876</td>\n",
+              "      <td>-79.518188</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99</th>\n",
+              "      <td>M9P</td>\n",
+              "      <td>Etobicoke</td>\n",
+              "      <td>Westmount</td>\n",
+              "      <td>43.696319</td>\n",
+              "      <td>-79.532242</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>100</th>\n",
+              "      <td>M9R</td>\n",
+              "      <td>Etobicoke</td>\n",
+              "      <td>Kingsview Village, Martin Grove Gardens, Richv...</td>\n",
+              "      <td>43.688905</td>\n",
+              "      <td>-79.554724</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>101</th>\n",
+              "      <td>M9V</td>\n",
+              "      <td>Etobicoke</td>\n",
+              "      <td>Albion Gardens, Beaumond Heights, Humbergate, ...</td>\n",
+              "      <td>43.739416</td>\n",
+              "      <td>-79.588437</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>102</th>\n",
+              "      <td>M9W</td>\n",
+              "      <td>Etobicoke</td>\n",
+              "      <td>Northwest</td>\n",
+              "      <td>43.706748</td>\n",
+              "      <td>-79.594054</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>103 rows × 5 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    Postcode      Borough  ...   Latitude  Longitude\n",
+              "0        M1B  Scarborough  ...  43.806686 -79.194353\n",
+              "1        M1C  Scarborough  ...  43.784535 -79.160497\n",
+              "2        M1E  Scarborough  ...  43.763573 -79.188711\n",
+              "3        M1G  Scarborough  ...  43.770992 -79.216917\n",
+              "4        M1H  Scarborough  ...  43.773136 -79.239476\n",
+              "..       ...          ...  ...        ...        ...\n",
+              "98       M9N         York  ...  43.706876 -79.518188\n",
+              "99       M9P    Etobicoke  ...  43.696319 -79.532242\n",
+              "100      M9R    Etobicoke  ...  43.688905 -79.554724\n",
+              "101      M9V    Etobicoke  ...  43.739416 -79.588437\n",
+              "102      M9W    Etobicoke  ...  43.706748 -79.594054\n",
+              "\n",
+              "[103 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
         }
       ]
     }
